Prevent text wrapping IE8

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -29,6 +29,7 @@ header
   width 100%
   padding-bottom 10px
   position relative
+  white-space nowrap
 
   /*
    * Note the use of the `main-color`
